# Angine-DX12

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Include/App/: AEngine.h  AppBase.h  AppRunner.h
Include/Basic/: Basic.h  Utils.h
Shaders/: HelloTriangle.hlsl  dx12-triangle.hlsl
Src/App/: AEngine.cc  AppBase.cc  AppRunner.cc
Test/: Angine.cc  dx12-triangle.cc
